# minibuddy

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE8-COMPLETION-REPORT.md
.claude/: memory.md  settings.local.json
docs/: MCP-USAGE-GUIDE.md  decisions.md  idea.md  plan.md
src/: main.rs
src/agent/: mod.rs  prompt.rs
src/config/: mod.rs
src/context/: mod.rs  storage.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  types.rs
src/mcp/: mod.rs  server_manager.rs  tool_adapter.rs  transport.rs  types.rs
src/tools/: bash.rs  mod.rs  read_file.rs  sandbox.rs  write_file.rs
src/tui/: event.rs  mod.rs  ui.rs
tests/: integration_mcp.rs  mcp_test_server.py  test_config_with_mcp.rs
