[package]
name = "mini-buddy"
version = "0.1.0"
edition = "2024"
description = "A minimalist AI programming agent for learning agent architectures"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"
