[package]
name = "mini-buddy"
version = "0.1.0"
edition = "2024"
description = "A minimalist AI programming agent for learning agent architectures"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# async trait 支持（Rust 目前 trait 中的 async fn 需要此 crate）
async-trait = "0.1"

# 流式输出支持（Phase 2）
futures = "0.3"              # Stream trait + StreamExt
async-stream = "0.3"        # stream! 宏，简化异步 Stream 生成
